// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the PoorQuality component should render correctly when quality is "poor" 1`] = `
<WithStyles(ForwardRef(Container))>
  <div>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-header-1"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-heading-2"
        gutterBottom={true}
        variant="h1"
      >
        <div
          className="makeStyles-errorIcon-3"
        >
          <ErrorIcon />
        </div>
        Quality 
        issues
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        This the last step! Your expected audio and video quality is
         
        <strong>
          degraded
           
        </strong>
        and overall performance 
        will be poor
        .
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-paperContainer-5"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Paper))
        className="makeStyles-paper-4"
      >
        <WithStyles(ForwardRef(Typography))
          variant="body1"
        >
          <strong>
            Tips to improve quality and performance:
          </strong>
        </WithStyles(ForwardRef(Typography))>
        <ul>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Close unused tabs and applications on your computer/device when using video.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Move closer to your router.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Turn off or disconnect from VPN.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Restart your computer or device.
            </WithStyles(ForwardRef(Typography))>
          </li>
        </ul>
      </WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(Button))
        className="makeStyles-viewButton-6"
        onClick={[MockFunction]}
        variant="outlined"
      >
        <ViewIcon />
        View detailed quality information
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-confirmationButtons-7"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        <strong>
          Did you try all of the tips to improve quality?
        </strong>
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
        style={
          Object {
            "marginRight": "1.5em",
          }
        }
        variant="contained"
      >
        Yes
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
      >
        Skip for now
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</WithStyles(ForwardRef(Container))>
`;

exports[`the PoorQuality component should render correctly when quality is "suboptimal" 1`] = `
<WithStyles(ForwardRef(Container))>
  <div>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-header-1"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-heading-2"
        gutterBottom={true}
        variant="h1"
      >
        <div
          className="makeStyles-errorIcon-3"
        >
          <WarningIcon />
        </div>
        Quality 
        is okay
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        This the last step! Your expected audio and video quality is
         
        <strong>
          suboptimal
           
        </strong>
        and overall performance 
        could be better
        .
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-paperContainer-5"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Paper))
        className="makeStyles-paper-4"
      >
        <WithStyles(ForwardRef(Typography))
          variant="body1"
        >
          <strong>
            Tips to improve quality and performance:
          </strong>
        </WithStyles(ForwardRef(Typography))>
        <ul>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Close unused tabs and applications on your computer/device when using video.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Move closer to your router.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Turn off or disconnect from VPN.
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))
              variant="body1"
            >
              Restart your computer or device.
            </WithStyles(ForwardRef(Typography))>
          </li>
        </ul>
      </WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(Button))
        className="makeStyles-viewButton-6"
        onClick={[MockFunction]}
        variant="outlined"
      >
        <ViewIcon />
        View detailed quality information
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-confirmationButtons-7"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        <strong>
          Did you try all of the tips to improve quality?
        </strong>
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
        style={
          Object {
            "marginRight": "1.5em",
          }
        }
        variant="contained"
      >
        Yes
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
      >
        Skip for now
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</WithStyles(ForwardRef(Container))>
`;
